# cpp_financial_numerical_recipes

./: .gitignore  CMakeLists.txt  README.md
appendix/: CMakeLists.txt  random_calculations.cpp
chapter_01/: main_date.cpp
chapter_03/: CMakeLists.txt  irr.cpp
chapter_04/: CMakeLists.txt  bonds_cx_discrete.cpp  bonds_durations_discrete.cpp
chapter_05/: CMakeLists.txt  bond_calculation_term_structure.cpp  term_ir_calculations.cpp  term_structure_interpolated.cpp
chapter_06/: CMakeLists.txt  min_variance_portfolio.cpp  setup_calculations.cpp
chapter_08/: CMakeLists.txt  binomial_option_pricing_calculations.cpp
chapter_09/: bs_partial_derivatives_calculations.cpp
chapter_1/: CMakeLists.txt  date.hpp  explicit_program.cpp  main_date.cpp  test.cpp
chapter_10/: CMakeLists.txt  warrants_calculations.cpp
chapter_11/: CMakeLists.txt  black_futures_options.cpp  bs_american_one_div.cpp  bs_dividends.cpp  ccy_options.cpp  perpetual_american_call.cpp
chapter_12/: CMakeLists.txt  american_div_option_binomial_approx.cpp  futures_opt_bin_approx.cpp
chapter_13/: CMakeLists.txt  american_partials_bin_approx.cpp  ccy_options_bin_approx.cpp  finite_diff_euro_american_put_explicit.cpp  finite_diff_euro_american_put_implicit.cpp  option_binomial_approx.cpp
chapter_14/: CMakeLists.txt  euro_call_delta_option_simulated.cpp
chapter_15/: CMakeLists.txt  am_opt_approx_baw.cpp  am_opt_approx_johnson.cpp  euro_call_option_simulated.cpp  variance_reduction.cpp  variance_reduction_exotics.cpp
chapter_16/: CMakeLists.txt  asian_euro_lookback_call.cpp  asian_geo_average_call.cpp  euro_option_generic.cpp  simulating_exotic_payoffs.cpp
chapter_17/: CMakeLists.txt  generic_binomial_calculations.cpp
chapter_18/: CMakeLists.txt  trinomial_tree_american_put.cpp
chapter_19/: CMakeLists.txt  heston_pricing_call.cpp  merton_jump_diffusion_call.cpp
chapter_2/: CMakeLists.txt
chapter_20/: CMakeLists.txt  bond_put_options.cpp
chapter_21/: CMakeLists.txt  credit_risk_bs_put.cpp
chapter_22/: CMakeLists.txt  cir_model.cpp  cubic_splines.cpp  nelson_siegel.cpp  vasicek_model.cpp
chapter_23/: CMakeLists.txt  rb_option_am_zcb.cpp
chapter_24/: CMakeLists.txt  bond_pricing_ir_tree.cpp  callable_bond_pricing_ir_tree.cpp  ir_tree_calculations.cpp
chapter_25/: CMakeLists.txt  bond_pricing_ho_lee.cpp
chapter_26/: CMakeLists.txt  bond_pricing_vasicek.cpp
chapter_27/: CMakeLists.txt  boost_example.cpp
chapter_3/: CMakeLists.txt  irr.cpp  pv.cpp
chapter_4/: bonds_continuous_values.cpp  bonds_cx_discrete.cpp  bonds_durations_discrete.cpp  bonds_pv_discrete.cpp  bonds_ytm_discrete.cpp
chapter_5/: CMakeLists.txt  bond_calculation_term_structure.cpp  ir_linear_interpolation.cpp  linear_system_bond_calculations.cpp  term_ir_calculations.cpp  term_structure_interpolated.cpp  working_with_ir_classes.cpp
chapter_6/: CMakeLists.txt  min_variance_portfolio.cpp  setup_calculations.cpp  vector_matrix_operations.cpp
chapter_7/: CMakeLists.txt  futures_calculations.cpp
chapter_8/: binomial_option_pricing_calculations.cpp
chapter_9/: CMakeLists.txt  bs_partial_derivatives_calculations.cpp  implied_vol.cpp
fin_recipes/: CMakeLists.txt  fin_recipes
fin_recipes/includes/: american_option_approx.hpp  binomial_option_pricing.hpp  binomial_term_structure_models.hpp  bond_options.hpp  bond_pricing.hpp  boost_date_time.hpp  bs_alternatives.hpp  cash_flow_pv_discrete.hpp  credit_risk.hpp  date.hpp  definitions.hpp  exotic_options.hpp  extending_bs.hpp  finite_differences.hpp  futures.hpp  generic_binomial.hpp  ir_trees.hpp  irr_calculations.hpp  norm_dist.hpp  option_pricing_binomial_approx.hpp  option_pricing_bs.hpp  option_pricing_simulation.hpp  payoffs.hpp  pv_calculations.hpp  term_ir.hpp  term_structure.hpp  term_structure_flat.hpp  term_structure_ho_lee.hpp  term_structure_interpolated.hpp  term_structure_models.hpp  trinomial_trees.hpp  warrants.hpp
fin_recipes/src/: american_option_approx.cpp  binomial_option_pricing.cpp  binomial_term_structure_models.cpp  bond_options.cpp  bond_pricing.cpp  boost_date_time.cpp  bs_alternatives.cpp  cash_flow_pv_discrete.cpp  credit_risk.cpp  date.cpp  exotic_options.cpp  extending_bs.cpp  finite_differences.cpp  futures.cpp  generic_binomial.cpp  ir_trees.cpp  irr_calculations.cpp  norm_dist.cpp  option_pricing_binomial_approx.cpp  option_pricing_bs.cpp  option_pricing_simulation.cpp  payoffs.cpp  pv_calculations.cpp  term_ir.cpp  term_structure.cpp  term_structure_flat.cpp  term_structure_ho_lee.cpp  term_structure_interpolated.cpp  term_structure_models.cpp  trinomial_trees.cpp  warrants.cpp
