cmake_minimum_required(VERSION 3.30)

project(cpp_financial_numerical_recipes LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(GSL REQUIRED)

add_subdirectory(fin_recipes)

add_subdirectory(chapter_01)
add_subdirectory(chapter_02)
add_subdirectory(chapter_03)
add_subdirectory(chapter_04)
add_subdirectory(chapter_05)
add_subdirectory(chapter_06)
add_subdirectory(chapter_07)
add_subdirectory(chapter_08)
add_subdirectory(chapter_09)
add_subdirectory(chapter_10)
add_subdirectory(chapter_11)
add_subdirectory(chapter_12)
add_subdirectory(chapter_13)
add_subdirectory(chapter_14)
add_subdirectory(chapter_15)
add_subdirectory(chapter_16)
add_subdirectory(chapter_17)
add_subdirectory(chapter_18)
add_subdirectory(chapter_19)
add_subdirectory(chapter_20)
add_subdirectory(chapter_21)
add_subdirectory(chapter_22)
add_subdirectory(chapter_23)
add_subdirectory(chapter_24)
add_subdirectory(chapter_25)
add_subdirectory(chapter_26)
add_subdirectory(appendix)
